--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -73,7 +73,7 @@
 
 1. Развернул 2 машины по заданию, почему-то зона у обоих машин ru-central1-a, хотя в переменной указывал для второй машины central1-b
 ### ![](https://github.com/Berezhok/neto_terraform/blob/main/02/img/vm_db.png)
-### ![](https://github.com/Berezhok/neto_terraform/blob/main/02/img/yc_2vm.png)
+### ![](https://github.com/Berezhok/neto_terraform/blob/main/02/img/yc.png)
 
 2. Почему то git не давал мне запушить, хотя я в gitignore добавил файл в котором указан Thoken, в общем чет непонятно.
 
@@ -85,11 +85,24 @@
 В качестве решения приложите вывод значений ip-адресов команды ```terraform output```.
 
 
+### Ответы
+1. Прописали что-то в outputs. Получили такой вывод 
+### ![](https://github.com/Berezhok/neto_terraform/blob/main/02/img/output.png)
+ip совпадает с виртуальными машинами
+### ![](https://github.com/Berezhok/neto_terraform/blob/main/02/img/yc.png)
+просто через terraform output
+### ![](https://github.com/Berezhok/neto_terraform/blob/main/02/img/ter_out.png)
+
+
 ### Задание 5
 
 1. В файле locals.tf опишите в **одном** local-блоке имя каждой ВМ, используйте интерполяцию ${..} с НЕСКОЛЬКИМИ переменными по примеру из лекции.
 2. Замените переменные внутри ресурса ВМ на созданные вами local-переменные.
 3. Примените изменения.
+
+### Ответы
+1. Поменял, не очень понял , что менять в названии в переменные сделал так 
+### ![](https://github.com/Berezhok/neto_terraform/blob/main/02/img/local.png)
 
 
 ### Задание 6
@@ -123,6 +136,12 @@
   
 5. Найдите и закоментируйте все, более не используемые переменные проекта.
 6. Проверьте terraform plan. Изменений быть не должно.
+
+### Ответы
+
+1. Изменили блок с ресурсами и metadata, изменений нет
+### ![](https://github.com/Berezhok/neto_terraform/blob/main/02/img/resurce.png)
+###![](https://github.com/Berezhok/neto_terraform/blob/main/02/img/meta.png)
 
 ------
 
