--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -141,7 +141,7 @@ ip совпадает с виртуальными машинами
 
 1. Изменили блок с ресурсами и metadata, изменений нет
 ### ![](https://github.com/Berezhok/neto_terraform/blob/main/02/img/resurce.png)
-###![](https://github.com/Berezhok/neto_terraform/blob/main/02/img/meta.png)
+### ![](https://github.com/Berezhok/neto_terraform/blob/main/02/img/meta.png)
 
 ------
 
@@ -165,6 +165,8 @@ ip совпадает с виртуальными машинами
 
 В качестве решения предоставьте необходимые команды и их вывод.
 
+### Ответы
+### ![](https://github.com/Berezhok/neto_terraform/blob/main/02/img/console.png)
 ------
 
 ### Задание 8*
