--- a/03/hw-03.md
+++ b/03/hw-03.md
@@ -32,6 +32,15 @@
 Приложите скриншот входящих правил «Группы безопасности» в ЛК Yandex Cloud или скриншот отказа в предоставлении доступа к preview-версии.
 
 ------
+### Ответ 
+1. Изучили
+2. Заполнили
+3. Выполнили. Создалась в виртуальная машина. Я не очень понял про prewiew доступ, но что-то у меня есть в личном кабинете.
+### ![](https://github.com/Berezhok/neto_terraform/blob/main/03/img/groop.png)
+### ![](https://github.com/Berezhok/neto_terraform/blob/main/03/img/groop2.png)
+
+
+
 
 ### Задание 2
 
